# WEave

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  LICENSE  NOTICE.md  README.en.md  README.md  README.ru.md  app.py  eslint.config.js  index.html  knip.json  package-lock.json  package.json  requirements.txt  run_without_console.bat  tailwind.config.ts  tsconfig.json  version.mjs  vite.config.ts
core/: accounts.py  config_manager.py  constants.py  resources.py  theme_manager.py  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/locales/: en.json
src-tauri/src/: app_state.rs  constants.rs  core.rs  dotnet_runtime.rs  lib.rs  logger.rs  plugin_manager.rs  plugin_paths.rs  plugins.rs  runtime.rs  services.rs
src-tauri/src/accounts/: mod.rs
src-tauri/src/commands/: accounts.rs  app.rs  config.rs  dotnet.rs  download.rs  extract.rs  i18n.rs  image.rs  logging.rs  metadata.rs  mod.rs  plugins.rs  steam.rs  updater.rs  we.rs  workshop.rs
src-tauri/src/config/: mod.rs  settings.rs  tests.rs
src-tauri/src/core/: app_state.rs  constants.rs  errors.rs  logger.rs
src-tauri/src/download/: mod.rs
src-tauri/src/extract/: mod.rs
src-tauri/src/i18n/: mod.rs
src-tauri/src/image_cache/: mod.rs
src-tauri/src/metadata/: mod.rs
src-tauri/src/plugins/: plugin_manager.rs  plugin_paths.rs
src-tauri/src/services/: download.rs  extract.rs  metadata.rs  we_client.rs
src-tauri/src/services/accounts/: user_accounts.rs
src-tauri/src/services/workshop/: parser.rs  webview.rs
src-tauri/src/workshop/: mod.rs  parser.rs  url_builder.rs  webview.rs
(+183 files in other folders)
