[package]
name = "weave"
version = "4.8.0"
description = "WEave"
authors = ["psyattack"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "WEave"
path = "src/main.rs"

[lib]
name = "weave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [ "tray-icon", "image-png", "protocol-asset" ] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-os = "2.3.2"
tauri-plugin-single-instance = "2.4.2"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = [ "full" ] }
reqwest = { version = "0.13.4", default-features = false, features = [ "json", "cookies", "gzip", "brotli", "form", "native-tls" ] }
scraper = "0.27.0"
ego-tree = "0.11.0"
url = "2.5.8"
anyhow = "1.0.103"
thiserror = "2.0.18"
dirs = "6.0.0"
sysinfo = "0.39.5"
chrono = { version = "0.4.45", features = [ "serde" ] }
base64 = "0.22.1"
sha2 = "0.11.0"
rand = "0.10.1"
log = "0.4.33"
env_logger = "0.11.11"
regex = "1.12.4"
parking_lot = "0.12.5"
once_cell = "1.21.4"
lru = "0.18.0"
pbkdf2 = "0.13.0"
aes-gcm = "0.10.3"
zip = "8.6.0"
unrar = "0.5.8"
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.27.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
